# timezone

./: .gitignore  CMakeLists.txt  CityManager.cpp  CityManager.h  PRODUCT_INTRODUCTION.md  RELEASE_NOTES.md  Readme.md  SettingsWindow.cpp  SettingsWindow.h  StartupManager.cpp  StartupManager.h  TimezoneWindow.cpp  TimezoneWindow.h  TrayIcon.cpp  TrayIcon.h  main.cpp  resources.qrc
data/: convert.py
release/translations/: timezone_fr.qm  timezone_ko.qm  timezone_pt.qm  timezone_zh.qm
translations/: timezone_de.qm  timezone_de.ts  timezone_en.qm  timezone_en.ts  timezone_es.qm  timezone_es.ts  timezone_fr.qm  timezone_fr.ts  timezone_ja.qm  timezone_ja.ts  timezone_ko.qm  timezone_ko.ts  timezone_pt.qm  timezone_pt.ts  timezone_zh.qm  timezone_zh.ts  translate_ts.py
